use ddd to refactor project
