# server/gin.go
@@ -2,9 +2,12 @@ package server
 
 import (
 	"fmt"
+	"os"
 
 	"github.com/opensourceways/xihe-server/docs"
+	"github.com/opensourceways/xihe-server/infrastructure"
 	"github.com/opensourceways/xihe-server/interfaces"
+	"github.com/opensourceways/xihe-server/util"
 
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -14,9 +17,13 @@ import (
 
 func StartWebServer() {
 	r := setRouter()
-	address := fmt.Sprintf(":%d", 8080)
+	address := fmt.Sprintf(":%d", util.GetConfig().AppPort)
+	util.Log.Infof(
+		" startup meta http service at port %s .and %s mode \n",
+		address, util.GetConfig().AppModel,
+	)
 	if err := r.Run(address); err != nil {
-		fmt.Errorf("startup meta  http service failed, err:%v\n", err)
+		util.Log.Infof("startup meta  http service failed, err:%v\n", err.Error())
 	}
 }
 
@@ -24,14 +31,56 @@ func StartWebServer() {
 func setRouter() *gin.Engine {
 	r := gin.New()
 	r.Use(gin.Recovery())
+	r.Use(util.LoggerToFile())
 	docs.SwaggerInfo.BasePath = "/api"
-	docs.SwaggerInfo.Title = "xihe"
-	docs.SwaggerInfo.Description = "set token name: 'Authorization' at header "
+	docs.SwaggerInfo.Title = util.GetConfig().AppName
+	docs.SwaggerInfo.Description = "请在请求的header中加入 'Authorization'  "
+	repo, err := infrastructure.NewRepositories()
+	if err != nil {
+		util.Log.Infof(" start repository failed, err:%v\n", err.Error())
+		os.Exit(1)
+		return nil
+	}
+	projectController := interfaces.NewProject(repo.ProjectRepo)
+	userController := interfaces.NewUser(repo.UserRepo)
 
-	v1 := r.Group(docs.SwaggerInfo.BasePath)
+	v1 := r.Group(docs.SwaggerInfo.BasePath + "/v1")
 	{
-		v1.GET("/v1/helloworld", interfaces.HelloWorld)
+		user := v1.Group("/user")
+		{
+			user.GET("/checkLogin", userController.CheckLogin)
+			user.GET("/callback", userController.AuthingCallback)
+			user.GET("/findUser", userController.FindUser)
+			user.Use(infrastructure.Authorize())
+			user.GET("/getCurrentUser", userController.GetCurrentUser)
+			user.PUT("/updatePhone", userController.UpdatePhone)
+			user.GET("/sendSmsCode", userController.SendSmsCode)
+			user.PUT("/bindPhone", userController.BindPhone)
+			user.GET("/sendEmailToResetPswd", userController.SendEmailToResetPswd)
+			user.GET("/sendEmailToVerifyEmail", userController.SendEmailToVerifyEmail)
+			user.PUT("/resetPasswordByEmailCode", userController.ResetPasswordByEmailCode)
+			user.PUT("/updateProfile/:id", userController.UpdateProfile)
+		}
+		git := v1.Group("/git")
+		{
+			git.Use(infrastructure.Authorize())
+		}
+		project := v1.Group("/project")
+		{
 
+			project.Use(infrastructure.Authorize())
+			project.POST("/save", projectController.Save)
+		}
+		model := v1.Group("/model")
+		{
+			model.Use(infrastructure.Authorize())
+
+		}
+		dataset := v1.Group("/dataset")
+		{
+			dataset.Use(infrastructure.Authorize())
+
+		}
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
